Add window icon for the main window
Which mainly provides a fallback of Calculator when built on other platforms than Windows

--- a/QtCalculator/Calculator.qrc
+++ b/QtCalculator/Calculator.qrc
@@ -1,4 +1,6 @@
 <RCC>
-    <qresource prefix="Calculator">
+    <qresource prefix="/Calculator">
+        <file>Resources/QtCalculator-icon.ico</file>
+        <file>Resources/QtCalculator-icon.svg</file>
     </qresource>
 </RCC>
